<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constraint"
    xmlns:tools="http://schemas.android.com/tools">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/dimension_24"
        tools:srcCompat="@tools:sample/backgrounds/scenic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view"
        android:layout_width="2000dp"
        android:layout_height="0dp"
        android:background="@color/purple_50"
        android:rotation="-5"
        android:layout_marginBottom="-50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRecycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-40dp"
        android:layout_marginTop="-20dp"
        app:cardCornerRadius="@dimen/dimension_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:background="@color/grey_background">

            <TextView
                android:id="@+id/txtTitle"
                style="@style/text_roboto_bold_20"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimension_16"
                android:text="@string/app_name"
                android:textSize="32dp"
                android:ellipsize="end"
                android:lines="2"
                android:layout_marginBottom="@dimen/dimension_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/dimension_32">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimension_5"
                    android:layout_marginHorizontal="@dimen/dimension_16">

                    <TextView
                        android:id="@+id/txtStatus"
                        style="@style/text_roboto_bold_16"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/dimension_16"
                        tools:text="@string/detail_status"
                        android:gravity="center_vertical"
                        android:lines="2"
                        android:ellipsize="end"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/imgStatus"/>


                    <ImageView
                        android:id="@+id/imgStatus"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:srcCompat="@drawable/icon_alive"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:background="@color/grey"
                        android:layout_marginHorizontal="@dimen/dimension_50"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/dimension_5"
                        android:layout_marginHorizontal="@dimen/dimension_16">

                        <TextView
                            android:id="@+id/txtSpecies"
                            style="@style/text_roboto_bold_16"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/dimension_16"
                            tools:text="@string/detail_species"
                            android:lines="2"
                            android:ellipsize="end"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/imgSpecies"/>

                        <ImageView
                            android:id="@+id/imgSpecies"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            app:srcCompat="@drawable/icon_alive"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:background="@color/grey"
                        android:layout_marginHorizontal="@dimen/dimension_50"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/dimension_5"
                        android:layout_marginHorizontal="@dimen/dimension_16">

                        <TextView
                            android:id="@+id/txtGender"
                            style="@style/text_roboto_bold_16"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/dimension_16"
                            tools:text="@string/detail_gender"
                            android:lines="2"
                            android:ellipsize="end"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/imgGender"/>

                        <ImageView
                            android:id="@+id/imgGender"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            app:srcCompat="@drawable/icon_alive"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:background="@color/grey"
                        android:layout_marginHorizontal="@dimen/dimension_50"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/dimension_5"
                        android:layout_marginHorizontal="@dimen/dimension_16">

                        <TextView
                            android:id="@+id/txtOrigin"
                            style="@style/text_roboto_bold_16"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/dimension_16"
                            tools:text="@string/detail_origen"
                            android:lines="2"
                            android:ellipsize="end"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/imgOrigin"/>

                        <ImageView
                            android:id="@+id/imgOrigin"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            app:srcCompat="@drawable/icon_alive"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:background="@color/grey"
                        android:layout_marginHorizontal="@dimen/dimension_50"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginHorizontal="@dimen/dimension_16">

                        <TextView
                            android:id="@+id/txtLocation"
                            style="@style/text_roboto_bold_16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/dimension_16"
                            tools:text="@string/detail_location" />

                    </LinearLayout>

                    <View
                        android:background="@color/grey"
                        android:layout_marginHorizontal="@dimen/dimension_50"
                        android:layout_width="match_parent"
                        android:layout_height="1dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_marginHorizontal="@dimen/dimension_16">

                        <TextView
                            android:id="@+id/txtEpisode"
                            style="@style/text_roboto_bold_16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="@dimen/dimension_16"
                            tools:text="@string/detail_episode" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/progressBarPurple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutRetry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <TextView
                    android:id="@+id/txtRetry"
                    style="@style/text_roboto_regular_16"
                    android:textStyle="bold"
                    android:textColor="@color/purple_80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_retry_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <Button
                    android:id="@+id/btnRetry"
                    style="@style/buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_retry"
                    android:layout_marginTop="@dimen/dimension_32"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txtRetry" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="2000dp"
                android:layout_height="0dp"
                android:background="@color/purple_50"
                android:rotation="-5"
                android:layout_marginTop="-22dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>